tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions01(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions01.ts(1,17): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== unicodeExtendedEscapesInRegularExpressions01.ts (1 errors) ====
    var x = /\u{0}/gu;
                    ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    